static/psi4manual/1.2.1/_sources/autodir_psivariables/module__ccenergy.rst.txt
.. _`apdx:ccenergy_psivar`:


CCENERGY
========

Computes coupled cluster energies. Called as part of any coupled cluster computation.

.. hlist::
   :columns: 1

   * :psivar:`BRUECKNER CONVERGED <BRUECKNERCONVERGED>`

   * :psivar:`CC CORRELATION ENERGY <CCCORRELATIONENERGY>`

   * :psivar:`CC D1 DIAGNOSTIC <CCD1DIAGNOSTIC>`

   * :psivar:`CC D2 DIAGNOSTIC <CCD2DIAGNOSTIC>`

   * :psivar:`CC NEW D1 DIAGNOSTIC <CCNEWD1DIAGNOSTIC>`

   * :psivar:`CC T1 DIAGNOSTIC <CCT1DIAGNOSTIC>`

   * :psivar:`CC TOTAL ENERGY <CCTOTALENERGY>`

   * :psivar:`CC2 CORRELATION ENERGY <CC2CORRELATIONENERGY>`

   * :psivar:`CC2 TOTAL ENERGY <CC2TOTALENERGY>`

   * :psivar:`CC3 CORRELATION ENERGY <CC3CORRELATIONENERGY>`

   * :psivar:`CC3 TOTAL ENERGY <CC3TOTALENERGY>`

   * :psivar:`CCSD CORRELATION ENERGY <CCSDCORRELATIONENERGY>`

   * :psivar:`CCSD OPPOSITE-SPIN CORRELATION ENERGY <CCSDOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`CCSD SAME-SPIN CORRELATION ENERGY <CCSDSAME-SPINCORRELATIONENERGY>`

   * :psivar:`CCSD TOTAL ENERGY <CCSDTOTALENERGY>`

   * :psivar:`CURRENT CORRELATION ENERGY <CURRENTCORRELATIONENERGY>`

   * :psivar:`CURRENT ENERGY <CURRENTENERGY>`

   * :psivar:`LCC2 (+LMP2) TOTAL ENERGY <LCC2(+LMP2)TOTALENERGY>`

   * :psivar:`LCCSD (+LMP2) TOTAL ENERGY <LCCSD(+LMP2)TOTALENERGY>`

   * :psivar:`MP2 CORRELATION ENERGY <MP2CORRELATIONENERGY>`

   * :psivar:`MP2 OPPOSITE-SPIN CORRELATION ENERGY <MP2OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`MP2 SAME-SPIN CORRELATION ENERGY <MP2SAME-SPINCORRELATIONENERGY>`

   * :psivar:`MP2 TOTAL ENERGY <MP2TOTALENERGY>`

   * :psivar:`SCF TOTAL ENERGY <SCFTOTALENERGY>`

   * :psivar:`SCF TOTAL ENERGY (CHKPT) <SCFTOTALENERGY(CHKPT)>`

   * :psivar:`SCS-CCSD CORRELATION ENERGY <SCS-CCSDCORRELATIONENERGY>`

   * :psivar:`SCS-CCSD OPPOSITE-SPIN CORRELATION ENERGY <SCS-CCSDOPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`SCS-CCSD SAME-SPIN CORRELATION ENERGY <SCS-CCSDSAME-SPINCORRELATIONENERGY>`

   * :psivar:`SCS-CCSD TOTAL ENERGY <SCS-CCSDTOTALENERGY>`

   * :psivar:`SCS-MP2 CORRELATION ENERGY <SCS-MP2CORRELATIONENERGY>`

   * :psivar:`SCS-MP2 OPPOSITE-SPIN CORRELATION ENERGY <SCS-MP2OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`SCS-MP2 SAME-SPIN CORRELATION ENERGY <SCS-MP2SAME-SPINCORRELATIONENERGY>`

   * :psivar:`SCS-MP2 TOTAL ENERGY <SCS-MP2TOTALENERGY>`

   * :psivar:`SCSN-MP2 CORRELATION ENERGY <SCSN-MP2CORRELATIONENERGY>`

   * :psivar:`SCSN-MP2 OPPOSITE-SPIN CORRELATION ENERGY <SCSN-MP2OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`SCSN-MP2 SAME-SPIN CORRELATION ENERGY <SCSN-MP2SAME-SPINCORRELATIONENERGY>`

   * :psivar:`SCSN-MP2 TOTAL ENERGY <SCSN-MP2TOTALENERGY>`


