static/psi4manual/1.5.0/_sources/autodir_psivariables/module__ccenergy.rst.txt
.. _`apdx:ccenergy_psivar`:


CCENERGY
========

Computes coupled cluster energies. Called as part of any coupled cluster computation.

.. hlist::
   :columns: 1

   * :psivar:`(T) CORRECTION ENERGY`

   * :psivar:`A-(T) CORRECTION ENERGY`

   * :psivar:`A-CCSD(T) CORRELATION ENERGY`

   * :psivar:`A-CCSD(T) TOTAL ENERGY`

   * :psivar:`AAA (T) CORRECTION ENERGY`

   * :psivar:`AAB (T) CORRECTION ENERGY`

   * :psivar:`ABB (T) CORRECTION ENERGY`

   * :psivar:`BBB (T) CORRECTION ENERGY`

   * :psivar:`BRUECKNER CONVERGED`

   * :psivar:`CC CORRELATION ENERGY`

   * :psivar:`CC D1 DIAGNOSTIC`

   * :psivar:`CC D2 DIAGNOSTIC`

   * :psivar:`CC NEW D1 DIAGNOSTIC`

   * :psivar:`CC ROOT n CORRELATION ENERGY`

   * :psivar:`CC ROOT n DIPOLE`

   * :psivar:`CC ROOT n DIPOLE X`

   * :psivar:`CC ROOT n DIPOLE Y`

   * :psivar:`CC ROOT n DIPOLE Z`

   * :psivar:`CC ROOT n QUADRUPOLE`

   * :psivar:`CC ROOT n QUADRUPOLE XX`

   * :psivar:`CC ROOT n QUADRUPOLE XY`

   * :psivar:`CC ROOT n QUADRUPOLE XZ`

   * :psivar:`CC ROOT n QUADRUPOLE YY`

   * :psivar:`CC ROOT n QUADRUPOLE YZ`

   * :psivar:`CC ROOT n QUADRUPOLE ZZ`

   * :psivar:`CC ROOT n TOTAL ENERGY`

   * :psivar:`CC T1 DIAGNOSTIC`

   * :psivar:`CC TOTAL ENERGY`

   * :psivar:`CC2 CORRELATION ENERGY`

   * :psivar:`CC2 DIPOLE POLARIZABILITY @ xNM`

   * :psivar:`CC2 SPECIFIC ROTATION (LEN) @ xNM`

   * :psivar:`CC2 SPECIFIC ROTATION (MVG) @ xNM`

   * :psivar:`CC2 SPECIFIC ROTATION (VEL) @ xNM`

   * :psivar:`CC2 TOTAL ENERGY`

   * :psivar:`CC3 CORRELATION ENERGY`

   * :psivar:`CC3 TOTAL ENERGY`

   * :psivar:`CCSD CORRELATION ENERGY`

   * :psivar:`CCSD DIPOLE POLARIZABILITY @ xNM`

   * :psivar:`CCSD DOUBLES ENERGY`

   * :psivar:`CCSD ITERATIONS`

   * :psivar:`CCSD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`CCSD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`CCSD SINGLES ENERGY`

   * :psivar:`CCSD SPECIFIC ROTATION (LEN) @ xNM`

   * :psivar:`CCSD SPECIFIC ROTATION (MVG) @ xNM`

   * :psivar:`CCSD SPECIFIC ROTATION (VEL) @ xNM`

   * :psivar:`CCSD TOTAL ENERGY`

   * :psivar:`CCSD(T) CORRELATION ENERGY`

   * :psivar:`CCSD(T) TOTAL ENERGY`

   * :psivar:`CURRENT CORRELATION ENERGY`

   * :psivar:`CURRENT ENERGY`

   * :psivar:`LCC2 (+LMP2) TOTAL ENERGY`

   * :psivar:`LCCSD (+LMP2) TOTAL ENERGY`

   * :psivar:`MP2 CORRELATION ENERGY`

   * :psivar:`MP2 DOUBLES ENERGY`

   * :psivar:`MP2 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP2 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP2 SINGLES ENERGY`

   * :psivar:`MP2 TOTAL ENERGY`

   * :psivar:`SCF TOTAL ENERGY`

   * :psivar:`SCS(N)-MP2 CORRELATION ENERGY`

   * :psivar:`SCS(N)-MP2 TOTAL ENERGY`

   * :psivar:`SCS-CCSD CORRELATION ENERGY`

   * :psivar:`SCS-CCSD TOTAL ENERGY`

   * :psivar:`SCS-MP2 CORRELATION ENERGY`

   * :psivar:`SCS-MP2 TOTAL ENERGY`


